# picture_frame

./: .env.example  .gitignore  README.md  docker-compose.yaml  prometheus.yml
.github/workflows/: release.yml  rust.yml
PictureFrameCompanion/: .gitignore  .swift-format.json
PictureFrameCompanion/PictureFrameCompanion/: ApiClient.swift  PictureFrameCompanionApp.swift
PictureFrameCompanion/PictureFrameCompanion.xcodeproj/: project.pbxproj
PictureFrameCompanion/PictureFrameCompanion.xcodeproj/project.xcworkspace/xcuserdata/schneiderad.xcuserdatad/: UserInterfaceState.xcuserstate
PictureFrameCompanion/PictureFrameCompanion.xcodeproj/xcuserdata/schneiderad.xcuserdatad/xcschemes/: xcschememanagement.plist
PictureFrameCompanion/PictureFrameCompanion/Model/: FrameSettings.swift  PartialSettings.swift  Token.swift
PictureFrameCompanion/PictureFrameCompanion/View/: ConnectionView.swift  ContentView.swift  SettingsView.swift  TokenView.swift
PictureFrameCompanion/PictureFrameCompanionTests/: PictureFrameCompanionTests.swift
PictureFrameCompanion/PictureFrameCompanionUITests/: PictureFrameCompanionUITests.swift  PictureFrameCompanionUITestsLaunchTests.swift
app/PictureFrameCompanion/: ApiClient.swift
app/PictureFrameCompanion.xcodeproj/: project.pbxproj
app/PictureFrameCompanion/Model/: Connection.swift  FrameSettings.swift  PartialSettings.swift  Picture.swift
app/PictureFrameCompanion/View/: ContentView.swift  PictureRow.swift  PicturesList.swift  SettingsView.swift
backend/: .env.example  frame_settings.toml
backend/src/: config.rs  lib.rs  main.rs
backend/src/api/: key_routes.rs  mod.rs  picture_routes.rs  settings_routes.rs
backend/src/common/: error.rs  metrics.rs  mod.rs  state.rs
backend/src/core/: auth.rs  handler.rs  key_handler.rs  mod.rs  picture_handler.rs  state.rs
backend/src/db/: frame_settings.rs  mod.rs  picture_dto.rs  picture_repository.rs  repository.rs
backend/src/db/dto/: key_create_request.rs  key_info.rs  mod.rs
crates/: Cargo.toml  frame_settings.toml
crates/backend/: Cargo.toml
crates/backend/src/: config.rs  lib.rs  main.rs
crates/backend/src/api/: mod.rs  picture_routes.rs  settings_routes.rs
crates/backend/src/common/: auth.rs  metrics.rs  state.rs
crates/backend/src/db/: frame_settings.rs  mod.rs  picture.rs  repository.rs
crates/display/: Cargo.toml
crates/display/src/: config.rs  main.rs
crates/hash_once/: Cargo.toml
crates/hash_once/src/: main.rs
crates/libs/: Cargo.toml
crates/libs/src/: frame_settings.rs  lib.rs  util.rs
crates/sdl_test/: Cargo.toml
crates/sdl_test/src/: main.rs
grafana/dashboards/: picture_frame_api_monitoring_dashboard.json
