[package]
name = "backend"
version = "0.1.0"
edition = "2024"
authors = ["Adrian Schneider <adrian.schneider11@icloud.com>"]
repository = "https://github.com/adrior11/picture_frame"
license = "MIT"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["multipart"] }
chrono = "0.4.41"
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.31"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png"] }
libs = { path = "../libs" }
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.0"
mime = "0.3.17"
once_cell = "1.21.3"
password-hash = "0.5.0"
prometheus = "0.14.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.28.0"
rand_core  = { version = "0.6.4", features = ["getrandom"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
sysinfo = "0.35.1"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["v4"] }
walkdir = "2.5.0"
