[package]
name = "display"
version = "0.1.0"
edition = "2024"
authors = ["Adrian Schneider <adrian.schneider11@icloud.com>"]
license = "MIT"

[[bin]]
name = "display"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
dotenv = "0.15.0"
envy = "0.4.2"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png"] }
libs = { path = "../libs" }
notify = "8.0.0"
once_cell = "1.21.3"
rand = "0.9.1"
sdl2 = { version = "0.37.0", features = ["ttf"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
