[package]
name = "hash_once"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Schneider <adrian.schneider11@icloud.com>"]
license = "MIT"

[[bin]]
name = "hash_once"
path = "src/main.rs"

[dependencies]
argon2 = "0.5.3"
# rand = "0.9.1"
# rand_core = { version = "0.9.3", features = ["os_rng"] }
rouille = { version = "3.6.2", features = ["rustls"]}
