[package]
name = "hash_once"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Schneider <adrian.schneider11@icloud.com>"]
repository = "https://github.com/adrior11/picture_frame"
license = "MIT"

[[bin]]
name = "hash_once"
path = "src/main.rs"

[dependencies]
argon2 = "0.5.3"
rand_core  = { version = "0.6.4", features = ["getrandom"] }
