[package]
name = "libs"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Schneider <adrian.schneider11@icloud.com>"]
repository = "https://github.com/adrior11/picture_frame"
license = "MIT"

[lib]
crate-type = ["lib"]

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
tracing = "0.1.41"
